--- a/app/src/main/res/menu/saved_options_land.xml
+++ b/app/src/main/res/menu/saved_options_land.xml
@@ -1,4 +1,6 @@
-<!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)-->
+<?xml version="1.0" encoding="utf-8"?>
+<!--Copyright (c) 2014, Fashiontec (http:/
+/fashiontec.org)-->
 <!--Licensed under LGPL, Version 3-->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
