--- a/app/src/main/res/layout/fragment_measurement.xml
+++ b/app/src/main/res/layout/fragment_measurement.xml
@@ -5,48 +5,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#ffffff"
     tools:context="org.fashiontec.bodyapps.main.MeasurementActivity$PlaceholderFragment" >
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical" 
          android:weightSum="1.0">
 
         <GridView
             android:id="@+id/grid_view"
-            android:layout_width="fill_parent"
-            android:layout_height="0dip"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:gravity="center"
             android:horizontalSpacing="10dp"
             android:numColumns="3"
             android:stretchMode="columnWidth"
-            android:verticalSpacing="10dp" 
-             android:layout_weight=".9">
+            android:verticalSpacing="10dp">
         </GridView>
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="0dip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight=".1"
-            android:weightSum="1.0"
+            android:weightSum="1"
             android:gravity="center_horizontal">
 
             <Button
                 android:id="@+id/measurement_btn_save"
-                style="@style/btnStyleios"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight=".7"
                 android:text="@string/save"
-                android:textColor="@drawable/btn_txt" />
+                android:textColor="@drawable/btn_txt"
+                style="@style/Widget.AppCompat.Button.Colored"/>
 
         </LinearLayout>
     </LinearLayout>
